Feature  simple cyclic task

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -221,8 +221,10 @@
                 "panel": "new"
             },
             "command": "openocd -s ${command:espIdf.getOpenOcdScriptValue} ${command:espIdf.getOpenOcdConfigs}",
+//            "command": "openocd -c 'set ESP_RTOS none' -s ${command:espIdf.getOpenOcdScriptValue} ${command:espIdf.getOpenOcdConfigs}",
             "windows": {
                 "command": "openocd.exe -s ${command:espIdf.getOpenOcdScriptValue} ${command:espIdf.getOpenOcdConfigs}",
+//                "command": "openocd.exe -c 'set ESP_RTOS none' -s ${command:espIdf.getOpenOcdScriptValue} ${command:espIdf.getOpenOcdConfigs}",
                 "options": {
                     "env": {
                         "PATH": "${env:PATH};${config:idf.customExtraPaths}"
