--- a/components/AHT10/CMakeLists.txt
+++ b/components/AHT10/CMakeLists.txt
@@ -1,3 +1,3 @@
-idf_component_register(SRCS "IO.c"
+idf_component_register(SRCS "AHT10.c"
                     INCLUDE_DIRS "."
                     REQUIRES driver)
